# goldybot4

./: .gitignore  README.md  client-cli.py  client-streamlit.py  goldybot.py  langgraph.json  pyproject.toml  server.py
drafts/: fastapi-test.py  main1.py  main2.py  main3.py  main4.py  main5.py  main6.py  main7.py  main8.py  mymain.py  prompt-test.py
